src/objects/Commodity_Alert__c.object
<CustomObject>
    <description>The commodities that a account would like to be alerted on.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that the alert is for</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commodity Alerts</relationshipLabel>
        <relationshipName>Commodity_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <description>The commodity the alert is for</description>
        <label>Commodity</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>The region that the alert is for</description>
        <label>Region</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Do they still want this alert available</description>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Commodity Alert</label>
    <nameField>
        <displayFormat>CommodityNumber-{0000000000}</displayFormat>
        <label>Commodity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commodity Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>